# Rust

./: Cargo.toml  Makefile  README.md  dfx.json
src/backend_1/: Cargo.toml  interface.did
src/backend_1/src/: lib.rs
src/backend_2/: Cargo.toml  interface.did
src/backend_2/src/: lib.rs
src/manager/: Cargo.toml  interface.did
src/manager/src/: lib.rs
